--- a/Css/3D.css
+++ b/Css/3D.css
@@ -16,7 +16,7 @@
     cursor: pointer;
     transition: transform 1s;
     transform-style: preserve-3d;
-    animation: photoRotate 8s ease;
+    animation: photoRotate 4s ease;
     animation-iteration-count: infinite;
     animation-fill-mode: forwards;
 }
@@ -25,7 +25,7 @@
     width: 128px;
     overflow: hidden;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-    transition: opacity 1s, transform 1s;
+    transition: opacity .2s, transform .2s;
     position: absolute;
     bottom: 0;
 }
